--- a/pom.xml
+++ b/pom.xml
@@ -66,5 +66,10 @@
       <artifactId>commons-codec</artifactId>
       <version>1.11</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-text</artifactId>
+      <version>1.3</version>
+    </dependency>
   </dependencies>
 </project>
