--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,11 @@
 						<includes>
 							<include>**/Test*.java</include>
 						</includes>
+						<systemPropertyVariables>
+                          <url>${url}</url>
+                          <user>${user}</user>
+                          <passsword>${passsword}</passsword>
+                       </systemPropertyVariables>
 					</configuration>
 				</plugin>
 			</plugins>
@@ -98,6 +103,7 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 </project>
